--- a/Resonance/app/src/main/res/values/strings.xml
+++ b/Resonance/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Resonance</string>
     <string name="section_format">effect #%1$d</string>
+    <string name="action_settings">Settings</string>
+    <string name="TrackVie"></string>
 </resources>
